# pypi-project-demos

./: .gitignore  LICENSE  README.md  SECURITY.md  agents.md  deploy_all.py  deploy_single.py  design.md  pycryptodomex-3.23.0-cp37-abi3-pyemscripten_2024_0_wasm32.whl
.github/: dependabot.yml
CurrencyConverter/: 1.11.0  README.md  llms.txt  package-lock.json  pyproject.toml  wrangler.toml
abbrev/: README.md  llms.txt  pyproject.toml  wrangler.toml
asn1/: README.md  llms-full.txt  llms.txt  package-lock.json  pyproject.toml  wrangler.toml
asof/: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  wrangler.toml
aspish/: README.md  llms-full.txt  llms.txt  package-lock.json  package.json  pyproject.toml  wrangler.toml
ass-imbk/: README.md  footer.html  llms-full.txt  llms.txt  package.json  pyproject.toml  test.ass  wrangler.toml
assinafy/: README.md  llms-full.txt  pyproject.toml  worker.js  wrangler.toml
assisted-service-client/: README.md  llms-full.txt  llms.txt  pyproject.toml  wrangler.toml
astro-mmdc/: README.md  llms-full.txt  llms.txt  pyproject.toml  wrangler.toml
astro-mmdc/src/: index.py
astrocyte-integration-tavus/: README.md  llms.txt  pyproject.toml  requirements.txt  wrangler.toml
astrocyte-integration-tavus/src/: index.py  index.py.orig
astrologica/: README.md  llms.txt  pyproject.toml  wrangler.toml
astrologica/src/: index.py
astronomy-types/: README.md  llms-full.txt  llms.txt  pyproject.toml  wrangler.toml
astronomy-types/src/: index.html  index.py  style.css
async-mega.py/: README.md  llms.txt  pyproject.toml  wrangler.toml
async-requests-tls/: README.md  pyproject.toml  wrangler.toml
asyncio-extensions/: README.md  llms-full.txt  package-lock.json  pyproject.toml  wrangler.toml
asyncio-extensions/python_modules/asyncio_extensions/: __init__.py  _compat.py  _iterators.py  _scheduling.py  _sync.py  _task_groups.py
asyncio-extensions/python_modules/asyncio_extensions-0.2.0.dist-info/: METADATA  RECORD
asyncio-extensions/python_modules/asyncio_extensions-0.2.0.dist-info/licenses/: LICENSE.txt
asyncio-extensions/src/: index.py
atendeaqui/: README.md  llms.txt  pyproject.toml  wrangler.toml
athena-openpyxl/: README.md  llms.txt  pyproject.toml  wrangler.toml
athena-openpyxl/src/: index.py
atlas-smilies/: README.md  llms-full.txt  pyproject.toml  wrangler.toml
atlaslevels/: README.md  llms-full.txt  llms.txt  pyproject.toml  wrangler.toml
atriumsports_sdk/: README.md  llms-full.txt  pyproject.toml  wrangler.toml
attestplane/: README.md  llms.txt  package.json  pyproject.toml  requirements.txt  wrangler.toml
attestplane/src/: index.py
audiosentinel/: README.md  llms.txt  package.json  (+4 more)
(+82 files in other folders)
