[project]
name = "astro-mmdc-demo"
version = "0.1.0"
description = "astro-mmdc PyPI demo running as a Cloudflare Python Worker"
requires-python = ">=3.12"
dependencies = [
    "astro-mmdc>=0.2.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
