[project]
name = "astrocyte-integration-tavus-demo"
version = "0.1.0"
description = "Astrocyte Integration Tavus demo running as a Cloudflare Python Worker"
requires-python = ">=3.12"
dependencies = [
    "astrocyte-integration-tavus",
    "httpx",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[tool.uv]
package = false
