[project]
name = "astrologica-demo"
version = "0.1.0"
description = "astrologica PyPI demo running as a Cloudflare Python Worker"
requires-python = ">=3.12"
dependencies = [
    "astrologica",
    "pyswisseph",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
