[project]
name = "astronomy-types-demo"
version = "0.1.0"
description = "astronomy-types PyPI demo running as a Cloudflare Python Worker"
requires-python = ">=3.12.4"
dependencies = [
    "astronomy-types",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
