[project]
name = "asyncio-extensions-demo"
version = "0.1.0"
description = "asyncio-extensions PyPI demo running as a Cloudflare Python Worker"
requires-python = ">=3.12"
dependencies = [
    "asyncio-extensions>=0.2.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[tool.uv]
package = false
