[project]
name = "attestplane-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "google-labs-jules[bot]", email = "161369871+google-labs-jules[bot]@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "attestplane==1.10.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
[tool.uv]
package = false
